# quicdns

./: Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  quicdns.service  quicdns.service.in
.github/: copilot-instructions.md
.github/workflows/: quality.yml
src/: main.rs
