[package]
name = "quicdns"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A high-performance DNS proxy with DNS-over-QUIC (DoQ) support"
repository = "https://github.com/abihf/quicdns"
keywords = ["dns", "quic", "proxy", "dns-over-quic", "doq"]
categories = ["network-programming"]

[dependencies]
anyhow = "1.0"
bytes = "1.9"
hickory-proto = "0.25.2"
moka = { version = "0.12", features = ["future"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "net", "macros", "io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
webpki-roots = "1.0.5"
