[package]
name = "quicdns"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A high-performance DNS proxy with DNS-over-QUIC (DoQ) support"
repository = "https://github.com/abihf/quicdns"
keywords = ["dns", "quic", "proxy", "dns-over-quic", "doq"]
categories = ["network-programming"]

[dependencies]
anyhow = "1.0"
bytes = "1.11.1"
hickory-proto = "0.25.2"
hickory-resolver = { version = "0.25.2" }
moka = { version = "0.12.13", features = ["future"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-native-certs = "0.8.3"
rustls-openssl = "0.3.0"
sd-notify = "0.4"
tokio = { version = "1.41", features = [
  "rt-multi-thread",
  "net",
  "macros",
  "io-util",
  "sync",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
split-debuginfo = "packed"

[profile.native]
inherits = "release"
